syntax = "proto3";

option go_package = "/gen";

package voice;

service VoiceService {
    rpc Hello(HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
    string in = 1 ;
}

message HelloResponse {
    string out = 1;
}

